pkgs/artifacts-tui/tests/snapshots/command_tests__scenario_help.snap
---
source: tests/command_tests.rs
info:
  program: artifacts
  args:
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
command line interafce to managing NixOS Artifacts

Usage: artifacts [OPTIONS] <COMMAND>

Commands:
  generate    Generate artifacts
  regenerate  Regenerate selected artifacts (or all)
  list        List all machines and artifacts configured in make.json
  help        Print this message or the help of the given subcommand(s)

Options:
      --log-level <LOG_LEVEL>  Set the logging level (error, warning, info, debug, trace) [default: info] [possible values: error, warning, info, debug, trace]
  -h, --help                   Print help
  -V, --version                Print version

----- stderr -----
