pkgs/artifacts-tui/tests/snapshots/command_tests__two_artifacts_scenario.snap
---
source: tests/command_tests.rs
info:
  program: artifacts-cli
  args:
    - generate
    - /home/palo/dev/nixos/nixos-artifacts/pkgs/artifacts-tui/examples/2_artifacts/backend.toml
    - /home/palo/dev/nixos/nixos-artifacts/pkgs/artifacts-tui/examples/2_artifacts/make.json
  env:
    ARTIFACTS_TUI_TEST_FIXED_TMP: "1"
    TMPDIR: /tmp/artifacts-tui-ci
  stdin: "one\ntwo\n"
---
success: true
exit_code: 0
----- stdout -----
[generate] machine: machine-name
  - artifact: artifact-one
    files to produce -> 1 files
      - first-secret => /run/secrets/first-secret
    running check_serialization: env inputs="/tmp/artifacts-tui-ci/artifacts-tui-test-artifact_one-inputs" machine="machine-name" artifact="artifact-one" /home/palo/dev/nixos/nixos-artifacts/pkgs/artifacts-tui/examples/2_artifacts/test_check.sh
    check_serialization: failed with status exit status: 1 -> continuing with generation
=== Content of /tmp/artifacts-tui-ci/artifacts-tui-test/out/first-secret ===
one
=========================
  - artifact: artifact-two
    files to produce -> 1 files
      - second-secret => /run/secrets/second-secret
    running check_serialization: env inputs="/tmp/artifacts-tui-ci/artifacts-tui-test-artifact_two-inputs" machine="machine-name" artifact="artifact-two" /home/palo/dev/nixos/nixos-artifacts/pkgs/artifacts-tui/examples/2_artifacts/test_check.sh
    check_serialization: failed with status exit status: 1 -> continuing with generation
=== Content of /tmp/artifacts-tui-ci/artifacts-tui-test/out/second-secret ===
two
=========================

----- stderr -----
