pkgs/artifacts-tui/tests/snapshots/command_tests__unwanted_files_scenario.snap
---
source: tests/command_tests.rs
info:
  program: artifacts
  args:
    - "--log-level=debug"
    - generate
    - /home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-tui/examples/unwanted-files
  env:
    NIXOS_ARTIFACTS_BACKEND_CONFIG: /home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-tui/examples/unwanted-files/backend.toml
    TMPDIR: /tmp/artifacts-tui-ci
  stdin: "one\ntwo\n"
---
success: false
exit_code: 1
----- stdout -----
DEBUG: Running nix build: "/run/current-system/sw/bin/nix" "build" "--impure" "-I" "flake=/home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-tui/examples/unwanted-files" "--no-link" "--print-out-paths" "--expr" "\nlet\n  system = \"x86_64-linux\";\n  filterAttrs =\n    pred: set:\n    builtins.removeAttrs set (builtins.filter (name: !pred name set.${name}) (builtins.attrNames set));\n  flake = builtins.getFlake (toString <flake>);\n  pkgs = flake.inputs.nixpkgs.legacyPackages.${system};\n  configurations = builtins.attrNames (\n    filterAttrs (\n      machine: configuration: builtins.hasAttr \"artifacts\" configuration.options\n    ) flake.nixosConfigurations\n  );\n  make = map (name: {\n    machine = name;\n    artifacts = flake.nixosConfigurations.${name}.config.artifacts.store;\n    config =\n      if (builtins.hasAttr \"config\" flake.nixosConfigurations.${name}.config.artifacts) then\n        flake.nixosConfigurations.${name}.config.artifacts.config\n      else\n        { };\n  }) configurations;\nin\npkgs.writeText \"test.json\" (builtins.toJSON make)\n"
DEBUG: make config: [{"artifacts":{"test-artifact":{"files":{"simple-secrets":{"group":"deployer","mode":"0400","name":"simple-secrets","owner":"deployer","path":"/run/secrets/simple-secrets"},"very-simple-secrets":{"group":"root","mode":"0400","name":"very-simple-secrets","owner":"root","path":"/run/secrets/very-simple-secrets"}},"generator":"/nix/store/lmbv8vd1iyn39hjqdfdcgms3s38yy1wi-test_generator_unwanted_files.sh","name":"test-artifact","prompts":{},"serialization":"test","shared":false}},"config":{},"machine":"unwanted-files"}]
[generate]
DEBUG:     files to produce -> 2 files
DEBUG:       - simple-secrets => /run/secrets/simple-secrets owner=deployer group=deployer
DEBUG:       - very-simple-secrets => /run/secrets/very-simple-secrets owner=root group=root
DEBUG:     running check_serialization: env inputs="/tmp/artifacts-tui-ci/inputs-test-artifact" machine="unwanted-files" artifact="test-artifact" /home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-tui/examples/unwanted-files/test_check.sh
DEBUG:     check_serialization: failed with status exit status: 1 -> continuing with generation
⚡ unwanted-files/test-artifact
DEBUG: bwrap command: bwrap --unshare-all --unshare-user --uid 1000 --gid 1000 --tmpfs / --chdir / --ro-bind /nix/store /nix/store --tmpfs /usr/lib/systemd --proc /proc --dev /dev --bind /tmp/artifacts-tui-ci/prompt-test-artifact /tmp/artifacts-tui-ci/prompt-test-artifact --bind /tmp/artifacts-tui-ci/out-test-artifact /tmp/artifacts-tui-ci/out-test-artifact --ro-bind /nix/store/ldcd6y487cnzkx03kr3glvq4w9pn2myj-test_generator_unwanted_files.sh/bin /nix/store/ldcd6y487cnzkx03kr3glvq4w9pn2myj-test_generator_unwanted_files.sh/bin --ro-bind /bin /bin --ro-bind /usr/bin /usr/bin --ro-bind /tmp/artifacts-tui-ci/artifacts-tui-passwd-cc66c63dc4c7a304.txt /etc/passwd -- /bin/sh /nix/store/ldcd6y487cnzkx03kr3glvq4w9pn2myj-test_generator_unwanted_files.sh/bin/test_generator_unwanted_files.sh

----- stderr -----
ERROR: generator produced extra files for artifact 'test-artifact': [should_not_be_there]
